--- a/Proyecto_WPF_SkiRent/Windows/WindowCategorias.xaml
+++ b/Proyecto_WPF_SkiRent/Windows/WindowCategorias.xaml
@@ -171,7 +171,7 @@
                                  Width="200"
                                  Margin="6,0"
                                  FontFamily="Arial"
-                                 FontSize="18"
+                                 FontSize="14"
                                  VerticalContentAlignment="Center"/>
 
                         <Button x:Name="btnBuscar"
@@ -192,7 +192,7 @@
 
                         <StackPanel Width="260" Margin="0,0,14,12">
                             <TextBlock Text="Nivel" Foreground="#64748B" FontSize="12" Margin="0,0,0,6"/>
-                            <ComboBox x:Name="cmbNivel" Height="34"/>
+                            <ComboBox x:Name="cmbNivel" Height="34" VerticalContentAlignment="Center"/>
                         </StackPanel>
                     </WrapPanel>
 
